--- a/views/game.erb
+++ b/views/game.erb
@@ -2,18 +2,22 @@
 
 <p>Welcome <%= session[:player_name] %>!</p>
 
+<div class='well'>
 Dealer's Cards:
 <% session[:dealer_cards].each do |card| %>
     <li><%= card.to_s %></li>
   <% end %>
+</div>
 
 <br/>
 
+<div class='well'>
 Player's Cards:
 
 <% session[:player_cards].each do |card| %>
   <li><%= card.to_s %></li>
 <% end %>
+</div>
 
 <p>
   What would you like to do?
