--- a/views/game.erb
+++ b/views/game.erb
@@ -28,12 +28,12 @@ Player's Cards:
 
 <% if @show_buttons %>
 
-<form action='/game/player/hit' method='post'>
-  <input type="submit" class="btn" value="Hit" />
+<form id='hit_button' action='/game/player/hit' method='post'>
+  <input type="submit" class="btn btn-success" value="Hit" />
 </form>
 
-<form action='/game/player/stay' method='post'>
-  <input type="submit" class="btn" value='Stay' />
+<form id='stay_button' action='/game/player/stay' method='post'>
+  <input type="submit" class="btn-warning" value='Stay' />
 </form>
 
 <% end %>
