put hit-stay buttons next to each other

--- a/views/game.erb
+++ b/views/game.erb
@@ -28,12 +28,12 @@ Player's Cards:
 
 <% if @show_buttons %>
 
-<form id='hit_button' action='/game/player/hit' method='post'>
+<form id="hit_button" action='/game/player/hit' method='post'>
   <input type="submit" class="btn btn-success" value="Hit" />
 </form>
 
-<form id='stay_button' action='/game/player/stay' method='post'>
-  <input type="submit" class="btn-warning" value='Stay' />
+<form id="stay_button" action='/game/player/stay' method='post'>
+  <input type="submit" class=" btn btn-warning" value='Stay' />
 </form>
 
 <% end %>
