--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
     <title>Blackjack</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src='/application.js'></script>
   </head>
   <body style="padding-top: 50px;">
 
@@ -18,13 +20,7 @@
     </div>
 
   <div class="container">
-    <%if @error %>
-      <div class="alert alert-error"><%=@error%></div>
-    <% end %>
 
-    <%if @success %>
-      <div class="alert alert-success"><%=@success%></div>
-    <% end %>
       <%= yield %>
   </div>
   </body>
