fix ajax request

--- a/views/game.erb
+++ b/views/game.erb
@@ -70,7 +70,7 @@ Player's Cards:
   <input type="submit" class="btn btn-success" value="Hit" />
 </form>
 
-<form id="stay_button" action='/game/player/stay' method='post'>
+<form id="stay_button" action='/dealer_turn' method='get'>
   <input type="submit" class=" btn btn-warning" value='Stay' />
 </form>
 
